# streaming-fft

./: .gitignore  ChangeLog.md  LICENSE  cabal.project  default.nix  release.nix  streaming-fft.cabal
app/: Main.hs  Timestamps.hs  Util.hs
nix/: nixpkgs.nix  overrides.nix
src/: Prelude.hs
src/Streaming/: FFT.hs
src/Streaming/FFT/: FFT.hs  Internal.hs  Nat.hs  Orphan.hs  Types.hs
src/Streaming/FFT/Internal/: Accelerate.hs  Orphan.hs  Streaming.hs
timestamps/: ts1.txt
