name:                streaming-fft
version:             0.1.0.0
synopsis:
  online (in input and output) streaming fft algorithm
  that uses a dense-stream optimisation to reduce work
  from /O(n log n)/ to /O(n)/.
homepage:            https://github.com/chessai/streaming-fft
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Streaming.FFT
    Streaming.FFT.Internal
    Streaming.FFT.Types
  other-modules:
    Streaming.FFT.Orphan
  build-depends:
      base >=4.9 && <5.0
    , containers 
    , contiguous-fft
    , ghc-prim 
    , primitive 
--    , primitive-checked
    , streaming
  hs-source-dirs:      src
  default-language:    Haskell2010

executable make-timestamps
  main-is: Timestamps.hs
  build-depends:
      base >= 4.9 && < 5.0
    , random
    , streaming-fft
  hs-source-dirs: app
  default-language: Haskell2010

executable anomaly-detection
  main-is: Main.hs
  build-depends:
      base >=4.9 && <5.0
    , streaming-fft
    , primitive
--    , primitive-checked
    , resourcet
    , streaming
  hs-source-dirs:      app
  default-language:    Haskell2010
