name:                streaming-fft
version:             0.1.0.1
synopsis:            online streaming fft
description:
  online (in input and output) streaming fft algorithm
  that uses a dense-stream optimisation to reduce work
  from /O(n log n)/ to /O(n)/.
homepage:            https://github.com/chessai/streaming-fft
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.3
  , GHC == 8.6.1

library
  exposed-modules:
    Streaming.FFT
    Streaming.FFT.Internal
    Streaming.FFT.Types
  build-depends:
      base >=4.9 && <5.0
    , contiguous-fft >= 0.1.0.1 && < 0.2.0.0
    , ghc-prim
    , prim-instances >= 0.1.0.0 && < 0.2.0.0
    , primitive >= 0.6.4.0 && < 0.7.0.0
    , streaming >= 0.2.2.0 && < 0.3.0.0
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -O2
